# bevy_intro_screen

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: publish.yml  rust.yml
examples/: bevy.rs  custom_failure_manager.rs  dynamic_duration.rs  egui.rs
examples/dynamic_duration/: Cargo.toml
examples/dynamic_duration/src/: main.rs
examples/egui/: Cargo.toml
examples/egui/src/: main.rs
src/: lib.rs
src/splash_screen/: bevy_ui.rs  egui.rs  mod.rs  skip_screen.rs  state.rs
src/splash_screen/tick/: dynamic.rs  fixed.rs  mod.rs
src/splash_screen/ui/: assets.rs  failure.rs  mod.rs
