[package]
name = "bevy_intro_screen"
version = "0.1.1"
edition = "2021"
readme = "README.md"
authors = ["Aarav Shah <aaravaditya51@gmail.com>"]
description = "Highly customizable introductio n(splash) screen library for Bevy games"
repository = "https://github.com/Deaths-Door/bevy_intro_screen"
homepage = "https://github.com/Deaths-Door/bevy_intro_screen"
documentation = "https://docs.rs/bevy_intro_screen"
license = "MIT OR Apache-2.0"

[features]
egui = ["bevy_egui"]
assets = ["bevy_asset_loader"]

[package.metadata.docs.rs]

# Features to pass to Cargo (default: [])
features = ["egui_ui", "assets"]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

[dependencies]
bon = "1.0.6"

bevy_asset_loader = { version = "0.21.0", optional = true }

bevy_egui = { version = "0.28.0" , features = ["immutable_ctx"] , optional = true }

getset = "0.1.2"

[dependencies.bevy]
version = "0.14.0" 
default-features = false 
features = [
    "bevy_core_pipeline",
    "bevy_state", 
    "bevy_audio",
]

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in release mode at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Significantly slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slightly slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in wasm-release mode to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Use release profile as default values.
inherits = "release"
# Optimize with size in mind (also try "s", sometimes it is better).
# This doesn't increase compilation times compared to -O3, great improvements.
opt-level = "z"
# Strip all debugging information from the binary to reduce file size.
strip = "debuginfo"

[dev-dependencies]
# For egui_ui example
egui_extras = { version = "0.28.1" , features = ["image"] }

[[example]]
name = "egui_ui"
path = "examples/egui/src/main.rs"
required-features = ["bevy/bevy_winit","egui"]

[[example]]
name = "custom_failure_manager"
path = "examples/custom_failure_manager.rs"
required-features = ["bevy/bevy_winit"]

[[example]]
name = "dynamic_duration"
path = "examples/dynamic_duration/src/main.rs"
required-features = ["bevy/bevy_winit","bevy/bevy_text","bevy/bevy_ui"]
